--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
     api 'com.google.android.material:material:1.6.0-alpha02'
     implementation 'com.google.android.material:material:1.6.0-alpha02'
+    implementation 'com.facebook.android:facebook-login:latest.release'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
