--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    api 'com.google.android.material:material:1.6.0-alpha02'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.android.material:material:1.6.0-alpha02'
     implementation 'com.facebook.android:facebook-login:latest.release'
     implementation 'androidx.appcompat:appcompat:1.4.1'
