--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,12 +47,7 @@
         <activity
             android:name=".AccountInfoActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ProductComparisonsActivity"
             android:exported="false"
@@ -65,12 +60,7 @@
         <activity
             android:name=".StarredProductActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ProductFeedActivity"
             android:exported="false"
@@ -87,12 +77,7 @@
         <activity
             android:name=".FeedbackActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AboutUsActivity"
             android:exported="false"
@@ -100,12 +85,7 @@
         <activity
             android:name=".ScanActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ForgottenPasswordActivity"
             android:exported="false"
