Should now fixed the auto email related dependencies that caused the gradle error. Along with some minor updates on strings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,15 @@ plugins {
 android {
     compileSdk 31
 
+    packagingOptions {
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
+
     defaultConfig {
         applicationId "com.example.food_product_comparison_android_app"
         minSdk 28
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -36,9 +41,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation files('libs/activation.jar')
-    implementation files('libs/additional.jar')
-    implementation files('libs/mail.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,4 +51,6 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.1.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.6'
 }
