Introduced app guide activity. Some other various minor changes around.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Food_Product_Comparison_Android_App">
+        <activity
+            android:name=".AppGuideActivity"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -47,12 +50,12 @@
         <activity
             android:name=".AccountInfoActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".ProductComparisonsActivity"
+            android:name=".ProductInformationActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".ScanActivity">
+            android:parentActivityName=".ScanActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ScanActivity" />
@@ -60,12 +63,12 @@
         <activity
             android:name=".StarredProductActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ProductFeedActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".ScanActivity">
+            android:parentActivityName=".ScanActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ScanActivity" />
@@ -73,19 +76,19 @@
         <activity
             android:name=".ScanHistoryActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".FeedbackActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AboutUsActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ScanActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ForgottenPasswordActivity"
             android:exported="false"
@@ -98,8 +101,8 @@
         <activity
             android:name=".PasswordEmailSentActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".LoginActivity">
+            android:parentActivityName=".LoginActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
