Introduced chat with bot activity!! (First phase of implementation done)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
         </provider>
 
         <activity
+            android:name=".ChatBotActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+
+        <activity
             android:name=".AccountInfoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
