Integrated privacy policy and terms and conditions web views to the App. Updated the APK file.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Food_Product_Comparison_Android_App">
+        <activity
+            android:name=".WebActivity"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -52,12 +55,10 @@
             android:name=".ChatBotActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ConfirmProfileImageActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".AccountInfoActivity"
             android:exported="false"
