--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 android {
     signingConfigs {
         release {
-            storeFile file('F:\\Food_Product_Comparison_Android_App\\external_resources\\CredentialFiles\\fit3162_scannera_release.keystore.jks')
+            storeFile file('D:\\Developer Credential Files\\Android Studio Projects\\Scannera\\fit3162_scannera_release.keystore.jks')
             storePassword 'fit3162scannera'
             keyAlias 'scannera_release.keystore'
             keyPassword 'fit3162scannera'
@@ -22,7 +22,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.food_product_comparison_android_app"
+        applicationId "com.example.scannera_app"
         minSdk 28
         targetSdk 31
         versionCode 1
