Changed the package name again, with the necessary changes to the associated files as required by google play console

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.scannera_app"
+        applicationId "com.fit3162.scannera_app"
         minSdk 28
         targetSdk 31
         versionCode 1
