--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation 'com.sun.mail:android-activation:1.6.6'
     implementation 'com.google.cloud:google-cloud-dialogflow:2.1.0'
     implementation 'io.grpc:grpc-okhttp:1.30.0'
+    testImplementation "org.mockito:mockito-core:3.+"
 }
