--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation 'com.google.cloud:google-cloud-dialogflow:2.1.0'
     implementation 'io.grpc:grpc-okhttp:1.30.0'
     testImplementation "org.mockito:mockito-core:3.+"
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
 }
